--- a/app/src/main/res/layout/fragment_artical.xml
+++ b/app/src/main/res/layout/fragment_artical.xml
@@ -1,14 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".article.ArticalFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
+    <TextView
+        android:id="@+id/article_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/article_author"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@android:color/background_dark"
+        android:padding="8dp"
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/article_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textColor="#3d3d3d"
+        android:lineSpacingExtra="9dp"
+        android:textSize="18sp" />
+    </LinearLayout>
+</android.support.v4.widget.NestedScrollView>
