--- a/app/src/main/res/layout/fragment_voice.xml
+++ b/app/src/main/res/layout/fragment_voice.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".voice.VoiceFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    tools:context=".voice.VoiceFragment"
+    android:orientation="vertical"
+    >
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:id="@+id/show_voice"
+        >
+    </android.support.v7.widget.RecyclerView>
 
-</FrameLayout>
+</LinearLayout>
