--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:fitsSystemWindows="true"
     tools:context=".tab.MainActivity">
 
@@ -30,4 +31,4 @@
         app:layout_constraintTop_toBottomOf="@+id/app_bar">
 
     </android.support.v4.view.ViewPager>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
