--- a/app/src/main/res/layout/fragment_artical.xml
+++ b/app/src/main/res/layout/fragment_artical.xml
@@ -30,9 +30,15 @@
     <TextView
         android:id="@+id/article_main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:textColor="#3d3d3d"
         android:lineSpacingExtra="9dp"
         android:textSize="18sp" />
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/next"
+            android:layout_gravity="right"
+            />
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
