--- a/app/src/main/res/layout/item_voice.xml
+++ b/app/src/main/res/layout/item_voice.xml
@@ -2,22 +2,25 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="25dp"
     card_view:contentPadding="10dp"
-    card_view:contentPaddingBottom="10dp"
+    android:layout_margin="20dp"
+    card_view:contentPaddingBottom="5dp"
     card_view:cardElevation="2dp"
-    card_view:cardCornerRadius="5dp">
+    card_view:cardCornerRadius="5dp"
+    android:fitsSystemWindows="true">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/voice_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/abc"/>
 
         <TextView
             android:id="@+id/voice_name"
@@ -37,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/darker_gray"
                 android:textSize="14sp"
-                android:textStyle="italic" />
+                 />
 
             <TextView
                 android:id="@+id/voice_player"
@@ -45,7 +48,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/darker_gray"
                 android:textSize="14sp"
-                android:textStyle="italic" />
+                 />
 
         </LinearLayout>
     </LinearLayout>
