--- a/app/src/main/res/layout/fragment_artical.xml
+++ b/app/src/main/res/layout/fragment_artical.xml
@@ -16,6 +16,7 @@
         android:layout_gravity="center_horizontal"
         android:textColor="@android:color/black"
         android:textSize="24sp"
+        android:layout_marginTop="8dp"
         android:textStyle="bold" />
 
     <TextView
@@ -24,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:textColor="@android:color/background_dark"
-        android:padding="8dp"
+        android:layout_marginTop="15dp"
         android:textSize="16sp" />
 
     <TextView
@@ -32,13 +33,31 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#3d3d3d"
-        android:lineSpacingExtra="9dp"
+        android:lineSpacingExtra="11dp"
         android:textSize="18sp" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
         <android.support.design.widget.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/next"
             android:src="@drawable/next"
-            android:layout_gravity="right"
+            android:layout_alignParentRight="true"
+            android:background="@color/cardview_light_background"
+            app:backgroundTint="#FFFFFF"
             />
+
+            <android.support.design.widget.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:id="@+id/favorite"
+                android:src="@drawable/like"
+                app:backgroundTint="#FFFFFF"
+                app:rippleColor="#33728dff" />
+        </RelativeLayout>
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
