--- a/app/src/main/res/layout/item_favorite.xml
+++ b/app/src/main/res/layout/item_favorite.xml
@@ -1,26 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="8dp"
+    android:layout_height="wrap_content"
+    android:padding="10dp"
+    android:layout_margin="5dp"
+    android:fitsSystemWindows="true"
     >
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/favorite-title"
+            android:gravity="center_horizontal"
             android:textSize="20sp"
             android:textColor="@android:color/black"
+            android:layout_alignParentTop="true"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/favorite_author"
             android:textSize="16sp"
-            android:layout_marginLeft="20sp"
-            android:layout_alignRight="@id/favorite-title"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
             />
         <TextView
             android:layout_width="wrap_content"
@@ -29,8 +34,9 @@
             android:textSize="14sp"
             android:lineSpacingExtra="4dp"
             android:maxLines="3"
+            android:layout_marginTop="5dp"
             android:layout_alignParentBottom="true"
             />
     </RelativeLayout>
 
-</android.support.v7.widget.CardView>
+</LinearLayout>
