--- a/app/src/main/res/layout/fragment_artical.xml
+++ b/app/src/main/res/layout/fragment_artical.xml
@@ -8,7 +8,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
     <TextView
         android:id="@+id/article_title"
@@ -40,25 +40,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
-        <android.support.design.widget.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/next"
-            android:src="@drawable/next"
-            android:layout_alignParentRight="true"
-            android:background="@color/cardview_light_background"
-            app:backgroundTint="#FFFFFF"
-            />
 
-            <android.support.design.widget.FloatingActionButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
+            <ImageView
                 android:id="@+id/favorite"
-                android:src="@drawable/like"
-                app:backgroundTint="#FFFFFF"
-                app:rippleColor="#33728dff" />
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/nofavorite" />
+
+            <ImageView
+                android:id="@+id/next"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentEnd="true"
+                android:src="@drawable/next" />
         </RelativeLayout>
     </LinearLayout>
 </ScrollView>
