--- a/app/src/main/res/layout/fragment_favorite_audio.xml
+++ b/app/src/main/res/layout/fragment_favorite_audio.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".favoriteArticle.FavtoriteArticleFragment"
-    android:orientation="vertical"
-    >
+    tools:context=".FavoriteAudio.FavoriteAudioFragment">
+
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/favorite_artiles"
+        android:id="@+id/favorite_audio"
         >
     </android.support.v7.widget.RecyclerView>
-
-</LinearLayout>
+</FrameLayout>
