--- a/app/src/main/res/layout/item_voice.xml
+++ b/app/src/main/res/layout/item_voice.xml
@@ -8,6 +8,7 @@
     android:layout_margin="20dp"
     card_view:contentPaddingBottom="5dp"
     card_view:cardElevation="2dp"
+    android:id="@+id/cardview"
     card_view:cardCornerRadius="5dp"
     android:fitsSystemWindows="true">
 
