--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+    <style name="AppTheme.Main" parent="Theme.Design.Light.NoActionBar">
+        <item name="android:windowExitTransition">@transition/animation</item>
+    </style>
 </resources>
